<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_white_black"
    android:orientation="vertical"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/pageSettingsPreview"
        style="@style/titleActivityButtonStyle"
        android:text="@string/Settings_button" />

    <Switch
        android:id="@+id/dayNightSwitch"
        style="@style/settingsActivityButtonsStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Dark_theme_switch_settings"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonShareApp"
        style="@style/settingsActivityButtonsStyle"
        android:text="@string/Share_app"
        app:icon="@drawable/share_app" />

    <Button
        android:id="@+id/buttonToSupport"
        style="@style/settingsActivityButtonsStyle"
        android:text="@string/to_support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/buttonTermsOfUse"
        style="@style/settingsActivityButtonsStyle"
        android:text="@string/terms_of_use"
        app:icon="@drawable/terms_of_use" />
</LinearLayout>

