<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homePage"
    style="@style/Base.Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homePage_head_text"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="start|center"
        android:text="@string/Panel_Header"
        android:textAlignment="viewStart"
        android:textColor="@color/allWhite"
        android:textFontWeight="500"
        android:textIsSelectable="false"
        android:textSize="22sp"
        android:theme="@style/Base.Theme.PlaylistMaker"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonSearch"
        style="@style/mainActivityButtonsStyle"
        android:layout_marginTop="24dp"
        android:text="@string/Search_button"
        app:icon="@drawable/search_icon" />

    <Button
        android:id="@+id/buttonMediaLibrary"
        style="@style/mainActivityButtonsStyle"
        android:text="@string/media_library_button"
        app:icon="@drawable/media_library" />

    <Button
        android:id="@+id/buttonSettings"
        style="@style/mainActivityButtonsStyle"
        android:layout_marginBottom="28dp"
        android:text="@string/Settings_button"
        app:icon="@drawable/settings_icon" />

</LinearLayout>