<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.SettingsActivity"
    android:background="@color/transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/no_connection"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/cardTextView"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_connection"
        android:textSize="19sp"/>

    <TextView
        style="@style/cardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:lines="2"
        android:text="@string/no_connection2"
        android:textAlignment="center"
        android:textSize="19sp" />
    
    <Button
        android:id="@+id/updateButNoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/updateButNoConnectionText"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/settingsActivityHeadText"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="500"
        android:textSize="14sp"/>

</LinearLayout>