<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/YP_white_black"
    android:theme="@style/Theme.SettingsActivity"
    android:id="@+id/searchActivityPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.tracks.TracksFragment">

    <TextView
        android:id="@+id/pageSearchPreview"
        style="@style/titleActivityButtonStyle"
        android:text="@string/searchActivityHead" />

    <LinearLayout
        android:id="@+id/searchContainer"
        style="@style/Search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/YP_gray_White"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/search_icon"
            app:tint="@color/grayBlack" />

        <EditText
            android:id="@+id/inputTextForSearching"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:backgroundTintMode="multiply"
            android:hint="@string/searchActivityHead"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/all_YP_Black"
            android:textColorHint="@color/grayBlack"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSelectHandle="@color/transparent" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:background="@color/transparent"
            android:src="@drawable/close"
            android:visibility="gone"
            app:tint="@color/grayBlack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchHistoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/SearchHistoryTitle"
            android:textFontWeight="500"
            android:textSize="19sp"
            android:theme="@style/cardTextViewBlackWhite"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackCardsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible"
            tools:listitem="@layout/search_track_card" />
        <!--        todo mus be visible-->
        <Button
            android:id="@+id/clearHistoryBut"
            style="@style/roundedBlackWhiteBut"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:text="@string/SearchHistoryClearBut"
            android:theme="@style/cardTextViewBlackWhite"
            android:visibility="gone" />
        <!--        todo mus be gone-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">
        <!--        todo mus be gone-->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/data_not_found"
            />

        <TextView
            style="@style/cardTextViewBlackWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/data_not_found"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:visibility="gone">
<!--        todo mus be gone-->

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/no_connection" />

        <TextView
            style="@style/cardTextViewBlackWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/no_connection"
            android:textSize="19sp" />

        <TextView
            style="@style/cardTextViewBlackWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:lines="2"
            android:text="@string/no_connection2"
            android:textAlignment="center"
            android:textSize="19sp" />

        <Button
            android:id="@+id/updateButNoConnection"
            style="@style/roundedBlackWhiteBut"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/updateButNoConnectionText"
            android:textColor="@color/white_YP_Black"
            android:theme="@style/cardTextViewBlackWhite" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/YP_light_background"
        android:visibility="gone" />
</LinearLayout>