<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_light_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/home_page_head"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/home_page_head_text"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:text="@string/Panel_Header"
            android:textAlignment="viewStart"
            android:textColor="@color/my_light_text"
            android:textIsSelectable="false"
            android:textSize="22sp"
            android:visibility="visible">
        </TextView>


        ></LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:id="@+id/But_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/Frame_search_but"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/Search_but"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/YP_white"
                android:backgroundTintMode="add"
                android:text="@string/Search_button"
                android:textAllCaps="false"
                android:textColor="@color/YP_black"
                android:textSize="26sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/search_icon"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_black"
                app:iconTintMode="src_in"
                ></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/media_library_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/YP_white"
                android:backgroundTintMode="add"
                android:text="@string/media_library_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/YP_black"
                android:textSize="26sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/media_library"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_black"
                app:iconTintMode="src_in"
                ></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/Settings_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/YP_white"
                android:backgroundTintMode="add"
                android:text="@string/Settings_button"
                android:textAllCaps="false"
                android:textColor="@color/YP_black"
                android:textSize="26sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/settings_icon"
                app:iconGravity="textStart"
                app:iconTint="@color/YP_black"
                app:iconTintMode="src_in"></Button>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>