<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchActivityPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|center_horizontal"
    android:orientation="vertical">


    <Button
        android:id="@+id/pageSearchPreview"
        style="@style/settingsActivityButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/searchActivityHead"
        android:textFontWeight="500"
        android:textSize="22sp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconSize="16dp"
        app:iconTint="@color/settingsActivityButtonsText" />


    <LinearLayout
        android:id="@+id/searchContainer"
        style="@style/ThemeOverlay.AppCompat.DayNight.SearchContainer.Search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/searchActivitySearchTextViewBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/search_icon"
            app:tint="@color/searchActivitySearchTextViewText" />


        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:backgroundTintMode="multiply"
            android:hint="@string/searchActivityHead"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/YP_black"
            android:textColorHint="@color/searchActivitySearchTextViewText"
            android:textFontWeight="400"
            android:textCursorDrawable="@drawable/cursor"
            android:textSelectHandle="@color/transparent"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:src="@drawable/close"
            android:visibility="gone"
            app:tint="@color/searchActivitySearchTextViewText" />
        <!--gone-->

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackCardsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/search_track_card" />

    <LinearLayout
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/data_not_found"

            />

        <TextView
            style="@style/cardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/data_not_found"
            android:textSize="19sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_connection"

            />

        <TextView
            style="@style/cardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/no_connection"
            android:textSize="19sp" />

        <TextView
            style="@style/cardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:lines="2"
            android:text="@string/no_connection2"
            android:textAlignment="center"
            android:textSize="19sp" />

        <Button
            android:id="@+id/updateButNoConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/settingsActivityHeadText"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/updateButNoConnectionText"
            android:textFontWeight="500"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>