<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/home_page_head"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/Settings_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/YP_white"
            android:gravity="start"
            android:text="@string/Settings_button"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="26sp"
            app:icon="?attr/actionModeCloseDrawable"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@color/YP_black"
            app:rippleColor="@color/YP_white"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>


        ></LinearLayout>

    <LinearLayout
        android:weightSum="3"
        android:id="@+id/But_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout

            android:layout_weight="1"
            android:id="@+id/Frame_search_but"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >




                <Switch
                    android:id="@+id/Dark_theme_switch_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:accessibilityHeading="false"
                    android:buttonTint="@color/YP_text_gray"
                    android:text="@string/Dark_theme_switch_settings"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"

                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <!--todo  почемуто схехал переключатель разобраться--></LinearLayout>


            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >


                <Button

                    android:id="@+id/Share_app_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:backgroundTint="@color/YP_white"
                    android:foregroundGravity="left|center"
                    android:text="@string/Share_app"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/YP_black"
                    android:textSize="18sp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    app:icon="@android:drawable/ic_menu_share"
                    app:iconGravity="end"
                    app:iconTint="@color/YP_text_gray"
                    ></Button></LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >




                <Button
                    android:id="@+id/to_support_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/YP_white"
                    android:foregroundGravity="left|center"
                    android:text="@string/to_support"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/YP_black"
                    android:textSize="18sp"
                    app:icon="@drawable/support"
                    app:iconGravity="end"
                    app:iconTint="@color/YP_text_gray"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    ></Button></LinearLayout>




            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >




                <Button
                    android:id="@+id/terms_of_use"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/YP_white"
                    android:foregroundGravity="left|center"
                    android:text="@string/terms_of_use"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/YP_black"
                    android:textSize="18sp"
                    app:icon="@drawable/terms_of_use"
                    app:iconGravity="end"
                    app:iconTint="@color/YP_text_gray"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    ></Button></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal"
            >


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >


        </LinearLayout>


    </LinearLayout>
</LinearLayout>